# coulson

./: .gitignore  Cargo.toml  LICENSE  README.md  config.example.toml  mise.toml
.github/workflows/: nightly.yml  release.yml  test.yml
BridgeheadApp/: Package.swift
BridgeheadApp/Sources/: BridgeheadApp.swift
BridgeheadApp/Sources/Models/: AppRecord.swift
BridgeheadApp/Sources/Networking/: UDSControlClient.swift
BridgeheadApp/Sources/ViewModel/: BridgeheadViewModel.swift
BridgeheadApp/Sources/Views/: AddAppView.swift  AppDetailView.swift  AppRowView.swift  DashboardView.swift  MenuPanel.swift  SettingsView.swift
CoulsonApp/: Info.plist  Package.swift  Project.swift
CoulsonApp/Sources/: CoulsonApp.swift
CoulsonApp/Sources/Models/: AppRecord.swift  ScanWarnings.swift
CoulsonApp/Sources/Networking/: UDSControlClient.swift
CoulsonApp/Sources/Services/: BundleResources.swift  CertTrustManager.swift  DaemonManager.swift  UpdaterController.swift
CoulsonApp/Sources/ViewModel/: CoulsonViewModel.swift
CoulsonApp/Sources/Views/: AddAppView.swift  AppDetailView.swift  AppRowView.swift  DashboardView.swift  MenuPanel.swift  SettingsView.swift
crates/bridgeheadd/: Cargo.toml  tunnelrpc.capnp
crates/bridgeheadd/src/: config.rs  main.rs  mdns.rs
crates/bridgeheadd/src/control/: mod.rs
crates/bridgeheadd/src/domain/: mod.rs
crates/bridgeheadd/src/process/: asgi.rs  docker.rs  mod.rs  node.rs  provider.rs  rack.rs
crates/bridgeheadd/src/proxy/: mod.rs
crates/bridgeheadd/src/runtime/: mod.rs
crates/bridgeheadd/src/scanner/: mod.rs
crates/bridgeheadd/src/store/: mod.rs
crates/bridgeheadd/src/tunnel/: edge.rs  mod.rs  named.rs  proxy.rs  quick.rs  rpc.rs  transport.rs
crates/coulson/: Cargo.toml  build.rs
crates/coulson/src/: certs.rs  config.rs  main.rs  mdns.rs  rpc_client.rs  service.rs  share.rs
crates/coulson/src/control/: mod.rs
crates/coulson/src/dashboard/: handlers.rs  mod.rs  render.rs
crates/coulson/src/dashboard/templates/: base.html
crates/coulson/src/dashboard/templates/pages/: app_detail.html  index.html  not_found.html  process_log.html  processes.html  request_detail.html  requests.html  warnings.html
crates/coulson/src/dashboard/templates/partials/: app_row.html  app_table.html  empty_state.html  lan_toggle.html  new_app_modal.html  request_row.html  settings_modal.html  stats.html  toast.html
crates/coulson/src/dashboard/templates/partials/detail/: danger.html  features.html  info.html  tunnel.html  urls.html
crates/coulson/src/domain/: mod.rs
crates/coulson/src/process/: asgi.rs  docker.rs  mod.rs  node.rs  procfile.rs  provider.rs  rack.rs
crates/coulson/src/proxy/: directory_listing.html  error.html  loading.html  mod.rs
crates/coulson/src/runtime/: mod.rs
crates/coulson/src/scanner/: mod.rs
crates/coulson/src/store/: mod.rs
crates/coulson/src/tunnel/: cli.rs  mod.rs  named.rs  proxy.rs  quick.rs  rpc.rs  share_auth.rs  transport.rs
