[workspace]
members = ["crates/bridgeheadd"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
thiserror = "2"
time = { version = "0.3", features = ["formatting", "parsing", "macros", "serde"] }
uuid = { version = "1", features = ["v7", "serde"] }
parking_lot = "0.12"
regex = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
pingora = { version = "0.6", features = ["proxy"] }
notify = "8"
bytes = "1"
