[workspace]
members = ["crates/coulson"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
thiserror = "2"
time = { version = "0.3", features = ["formatting", "parsing", "macros", "serde"] }
uuid = { version = "1", features = ["v7", "serde"] }
parking_lot = "0.12"
regex = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
pingora = { version = "0.6", features = ["proxy", "rustls"] }
rcgen = "0.14"
mdns-sd = { version = "0.17", features = ["async"] }
notify = "8"
bytes = "1"
capnp = "0.20"
capnp-rpc = "0.20"
h2 = "0.4"
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "client-legacy", "http1"] }
http-body-util = "0.1"
http = "1"
rustls = "0.23"
rustls-pemfile = "2"
tokio-rustls = "0.26"
webpki-roots = "0.26"
reqwest = { version = "0.12", features = ["json", "blocking"] }
hickory-resolver = "0.25"
base64 = "0.22"
futures = "0.3"
rand = "0.8"
tokio-util = { version = "0.7", features = ["compat"] }
clap = { version = "4", features = ["derive"] }
colored = "2"
tabled = { version = "0.17", features = ["ansi"] }
jsonwebtoken = "9"
p256 = { version = "0.13", features = ["pem"] }
toml = "0.8"
tera = "1"
