[package]
name = "coulson"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
colored.workspace = true
tabled.workspace = true
async-trait.workspace = true
bytes.workspace = true
parking_lot.workspace = true
pingora.workspace = true
rcgen.workspace = true
mdns-sd.workspace = true
notify.workspace = true
regex.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
capnp.workspace = true
capnp-rpc.workspace = true
h2.workspace = true
hyper.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true
http.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
tokio-rustls.workspace = true
webpki-roots.workspace = true
reqwest.workspace = true
hickory-resolver.workspace = true
base64.workspace = true
futures.workspace = true
rand.workspace = true
tokio-util.workspace = true
jsonwebtoken.workspace = true
p256.workspace = true
toml.workspace = true

[features]
builtin-quick-tunnel = []

[build-dependencies]
capnpc = "0.20"
